# da

./: .env  implementation1.ipynb  implementation2.ipynb  implementation3.py  main.py  pyproject.toml  satellite_imagery.ipynb
satellite_analysis/: 2010_metadata.json  2023_metadata.json  change_analysis.json  gemini_analysis_report.json  gemini_analysis_report.md
