[project]
name = "da"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "planetary-computer>=1.0.0",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.3",
]
